--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   font-size: 1.2rem;
+  text-transform: uppercase;
   position: fixed;
   left: 0;
   right: 0;
