--- a/src/pages/Courses/Category2/Category2.module.css
+++ b/src/pages/Courses/Category2/Category2.module.css
@@ -1,14 +1,23 @@
 .categoryItem{
     list-style: none;
     font-size: 1.2rem;
-    padding: 8px 20px;
     font-weight: 500;
     text-transform: uppercase;
     transition: all 0.2s ease;
 }
 
-.categoryItem:hover{
+.categoryItemLink:hover{
     color: var(--theme-color2);
     cursor: pointer;
     background-color: #fff;
+    text-decoration: none;
+}
+
+.categoryItemLink{
+    text-decoration: none;
+    display: block;
+    color: #232323;
+    padding: 8px 20px;
+    color: rgb(139, 18, 139)
+
 }
