--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -171,3 +171,67 @@
     order: 3
   }
 }
+
+/* account */
+
+.account{
+  text-transform: initial;
+  position: relative;
+}
+
+.account:hover .accountContent{
+  display: block;
+}
+.account:hover{
+  cursor: pointer;
+}
+
+.accountIcon i{
+  width: 28px;
+  height: 28px;
+  background-color: white;
+  color: var(--theme-color2);
+  border-radius: 50%;
+  line-height: 28px;
+  text-align: center;
+  margin: 0 12px;
+}
+
+
+.accountContent{
+  position: absolute;
+  list-style: none;
+  top: 120%;
+  right: 0;
+  min-width: 130px;
+  background-color: white;
+  color: var(--theme-color2);
+  display: none;
+  border-radius: 2px;
+}
+
+.accountContent::after{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 20px;
+  position: absolute;
+  top: -16px;
+}
+
+.accountContent li{
+  font-size: 1.1rem;
+  font-weight: 500;
+  padding: 6px 12px;
+}
+
+.accountContent li:hover{
+  background-color: whitesmoke;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.accountContent li a{
+  text-decoration: none;
+  color: var(--theme-color2);
+}
